--- a/package.json
+++ b/package.json
@@ -3,7 +3,13 @@
   "version": "1.0.0",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "node index.js",
+    "dev": "nodemon index.js",
+    "test": "echo \"Error: no test specified\" && exit 1""scripts":
+  },
+  "engines": {
+  "node": "18.x",
+  "npm": "8.x"
   },
   "keywords": [],
   "author": "",
@@ -17,6 +23,7 @@
     "express-rate-limit": "^7.5.0",
     "helmet": "^8.0.0",
     "jsonwebtoken": "^9.0.2",
-    "mongoose": "^0.0.1-security"
+    "mongoose": "^6.9.2"
   }
 }
+
